--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phantom-proxy",
+  "name": "phantom-unblocker",
   "version": "1.6.0",
   "type": "module",
   "packageManager": "pnpm@9.12.3",
