--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "phantom-unblocker",
   "version": "1.6.0",
   "type": "module",
-  "packageManager": "pnpm@9.14.2",
+  "packageManager": "pnpm@9.12.3",
   "engines": {
+    "npm": ">=10.0.0",
     "node": ">=20.0.0"
   },
   "scripts": {
