--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phantom-unblocker",
+  "name": "phantom-proxy",
   "version": "1.6.0",
   "type": "module",
   "packageManager": "pnpm@9.12.3",
@@ -13,18 +13,15 @@
   "author": "DrNate1010",
   "license": "MIT",
   "dependencies": {
-    "@mercuryworkshop/bare-mux": "^2.1.6",
+    "@mercuryworkshop/bare-mux": "^2.1.7",
     "@mercuryworkshop/epoxy-transport": "^2.1.26",
     "@mercuryworkshop/scramjet": "https://github.com/MercuryWorkshop/scramjet/releases/download/latest/mercuryworkshop-scramjet-1.0.2-dev.tgz",
-    "@rubynetwork/rammerhead": "^1.3.5",
-    "@rubynetwork/rammerhead-browser": "^1.0.9",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
     "express": "^4.21.1",
-    "meteorproxy": "1.0.6-patch.1",
     "wisp-server-node": "^1.1.7",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.1"
+    "eslint": "^9.15.0"
   }
 }
